@@ -207,3 +207,4 @@ v 2.0:
 	- Clear our attachment map upon a manload so we correctly reconfigure a players new permissions.
 	- Synchronize the raising of GroupManager events to Bukkit.getServer() (should prevent deadlocks).
 	- Synchronize pushing to Bukkit perms to prevent any ConcurrentModificationException.
+	- Do not grant any permissions (nort update Bukkit) if the server is in offline mode and the player has the permission node 'groupmanager.noofflineperms'.
